tests/stable/misc/compile_fail/method_replace_forward.rs
use pre::pre;

struct X;

impl X {
    fn foo(&self) {}

    fn bar(&self) {}
}

#[pre]
fn main() {
    #[forward(foo -> bar)]
    X.foo();
}
