tests/stable/misc/compile_fail/method_replace_forward.stderr
error: a replacement `forward` attribute is not supported for method calls

  = help: try replacing it with a direct location, such as `bar`

  --> $DIR/method_replace_forward.rs:14:5
   |
14 |     X.foo();
   |     ^
